fix: change welcome image height on small devices

--- a/container/Hero/Hero.css
+++ b/container/Hero/Hero.css
@@ -40,6 +40,7 @@
     }
     .app__hero-welcome img{
         width: 75vw;
+        height: 100px;
     }
 }
 
